--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -38,6 +38,7 @@ nav {
 
 .nav-options-container {
     display: flex;
+    align-items: center;
     gap: 1em;
 }
 
